--- a/Company/pom.xml
+++ b/Company/pom.xml
@@ -48,6 +48,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/at.favre.lib/bcrypt -->
+         <dependency>
+           <groupId>at.favre.lib</groupId>
+           <artifactId>bcrypt</artifactId>
+           <version>0.10.2</version>
+        </dependency>
 	</dependencies>
 
 	<build>
