--- a/Company/src/main/resources/application.properties
+++ b/Company/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/Company_DB
 spring.datasource.username=root
 spring.datasource.password=root@123
